# soc-multi-agent-system

./: .gitignore  README.md  docker-compose.yml  gradio_ui.py  langgraph.json  pyproject.toml  requirements.txt
data/: mitre_attack_subset.json  sample_alerts.json
data/memory/incidents/: chroma.sqlite3
data/memory/playbooks/: chroma.sqlite3
docker/: Dockerfile.app  Dockerfile.mcp
mcp_servers/: __init__.py  memory_server.py  mock_data.py  requirements.txt  siem_server.py
mcp_servers/core/: __init__.py  memory_manager.py
mcp_servers/integrations/: __init__.py  abuseipdb_integration.py  http_client.py  virustotal_integration.py
mcp_servers/tools/: __init__.py  memory_tools.py
src/: __init__.py  alert_normalizer.py  chat_graph.py  config.py  graph.py  llm_factory.py  mcp_integration.py  state.py
src/agents/: __init__.py  single_agent.py
src/intelligence/: __init__.py  mitre_attack.py
src/memory/: __init__.py  campaign_detector.py  compaction.py  manager.py  playbooks.py
src/security/: __init__.py
ui/: __init__.py
ui/components/: __init__.py  agent_chat.py  agent_orchestration.py  bento_card.py  mcp_status.py  memory_context.py  results.py  status_panel.py  threat_gauge.py
ui/config/: __init__.py  agents.py  constants.py
ui/helpers/: __init__.py  formatters.py  html.py
ui/layouts/: __init__.py  bento_grid.py
ui/styles/: __init__.py  animations.py  bento_css.py  css.py
utils/: alert_generator.py
